# examples

./: .gitignore  README.md  karate_task_prompt.md  karate_testomat_integration.md  package.json
.claude/: settings.local.json
ci-test/: package.json  playwright.config.ts
codeceptJS/: .gitignore  README.md  codecept.conf.js  package-lock.json  package.json  run-tests-and-check-results.sh  steps.d.ts
codeceptJS-typescript/: codecept.conf.ts  package.json
codeceptJSApi/: codecept.conf.js  package.json
codeception/: .gitignore  .php_cs.dist  .travis.yml  README.md  codeception.yml  composer.json  docker-compose.yml
codeceptjs-cucumber/: README.md  codecept.conf.js  package-lock.json  package.json
cucumber/: README.md  formatter.js  package-lock.json  package.json
cucumber-new/: cucumber.js  package.json
cypress/: README.md  cypress.config.js  package-lock.json  package.json  run-tests-and-check-results.sh
cypress-cucumber/: README.md  cypress.config.js  package.json
explorbot/: .env.example  .gitignore  README.md  explorbot.config.js  package.json
java-cucumber-maven/: README.md  pom.xml
java-junit-maven/: .gitignore  README.md  pom.xml
java-junit-maven-0.1.0/: README.md  pom.xml
java-reporter-cucumber/: README.md  pom.xml
java-reporter-junit/: .gitignore  README.md  pom.xml
java-reporter-karate/: README.md  pom.xml
java-reporter-testng/: .gitignore  README.md  pom.xml
java-reporter-testng-selenide/: README.md  pom.xml  testng.xml
java-testng-maven-0.1.0/: README.md  pom.xml
jest/: README.md  jest.config.js  package-lock.json  package.json
jest-esm/: README.md  jest.config.js  package.json
junit/: README.md  package.json
karate-example/: README.md  pom.xml
mocha-ts-multi-reporters/: .env.example  .mocharc.js  README.md  package.json  reporter.conf.js  tsconfig.json
mocha-typescript/: .env.example  .eslintrc.json  .gitignore  .mocharc.js  README.md  rpConfig.js
newman/: README.md  collection.json  collection_fail.json  collection_with_folders.json  env.json  package.json
nightwatch/: README.md  nightwatch.conf.js  package.json  tsconfig.json
phpunit/: .gitignore  README.md  composer.json  phpunit.xml
playwright/: .gitignore  README.md  package.json  (+4 more)
playwright-cucumber-js/: README.md  cucumber.js  package.json
playwright-python/: .gitignore  README.md  conftest.py  pyproject.toml
playwright-python/.github/workflows/: testomatio.yml
playwright-python/helpers/: random_failure.py
playwright-python/pages/: checkout_page.py  todo_page.py
playwright-python/tests/: test_add_remove.py  test_checkout_ui.py  test_form.py  test_random_failures.py  test_todo_ui.py
pytest/: README.md  conftest.py  pyproject.toml  pytest.ini  report.html
pytest/.github/workflows/: testomatio.yml
pytest/helpers/: __init__.py  random_failure.py
pytest/pages/: checkout_page.py  todo_page.py
pytest/tests/: test_add_remove.py  test_checkout_ui.py  test_form.py  test_random_failures.py  test_todo_ui.py
(+402 files in other folders)
