[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.isort]
profile = "black"
skip = ["env", "venv"]

[tool.poetry]
authors = ["Nir Tal <nirt236@gmail.com>"]
description = "Selenium Python example project with pytest and Testomatio report"
homepage = "https://github.com/nirtal85/Selenium-Python-Example"
name = "selenium-python-example"
readme = "README.md"
repository = "https://github.com/nirtal85/Selenium-Python-Example"
version = "0.1.0"

[tool.poetry.dependencies]
assertpy = "1.1"
dataclasses-json = "0.6.7"
deprecated = "1.2.18"
pytest = "8.3.4"
pytest-base-url = "2.1.0"
pytest-check = "2.4.1"
pytest-dependency = "0.6.0"
pytest-ordering = "0.6"
pytest-rerunfailures = "15.0"
pytest-split = "0.10.0"
python = "^3.11"
python-dotenv = "1.0.1"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
selenium = "4.28.1"
tenacity = "9.0.0"
visual-regression-tracker = "4.9.0"
xlrd = "2.0.1"

[tool.poetry.group.dev.dependencies]
black = "25.1.0"
isort = "6.0.0"
pytestomatio = "^2.10.0"
pytest = "^8.3.4"
pytest-html = "^4.1.1"

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "-s",
  "-p no:logging"
]
base_url = 'https://www.involve.me/'
markers = [
  "security: marks security tests",
]
testpaths = [
  "tests"
]
